Redux state management

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ html{
                     gap: 10px;    
                     .item{
                         align-self: center;
-                        background-color: $white;
+                        background: $white;
                         box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1) !important;
                         border: 1px solid $dark-gray;
                         margin: 0px;
